--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "openai": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
